[gd_scene load_steps=2 format=3 uid="uid://cibm1xb2g30ct"]

[ext_resource type="Script" path="res://onoff_value_entry.gd" id="1_ukcj3"]

[node name="HBoxContainer" type="HBoxContainer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ukcj3")

[node name="option_name" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="buttons" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="option_on" type="CheckButton" parent="buttons"]
layout_mode = 2
size_flags_horizontal = 8

[node name="option_text" type="LineEdit" parent="buttons"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 10
alignment = 2
expand_to_text_length = true

[connection signal="tree_entered" from="option_name" to="." method="_on_option_name_tree_entered"]
[connection signal="toggled" from="buttons/option_on" to="." method="_on_option_on_toggled"]
[connection signal="tree_entered" from="buttons/option_on" to="." method="_on_option_on_tree_entered"]
[connection signal="tree_entered" from="buttons/option_text" to="." method="_on_option_text_tree_entered"]
